--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,17 @@
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
+$color-background: #f2f2f2;
+$color-black: #000;
+$color-background-2: #e9e9e9;
 
 /*Charte d'écriture*/
+
 $logo-title-font: "Shrikhand", cursive;
-$text-font: "Roboto", sans-serif; ;
+$text-font: "Roboto", sans-serif;
+
+/*Font type*/
+
+$fontSize: 25px;
+
+$fontWeight: bold;
