--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -84,6 +84,7 @@ th {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #e9e9e9;
 }
 .header__logo {
   background: #fff;
@@ -97,28 +98,45 @@ th {
   height: 50px;
   width: 160px;
 }
-.header__search input {
-  width: 100vw;
-  height: 50px;
-  /*border: 1px solid #f3f3f3;*/
-  text-align: center;
-  background-color: #e9e9e9;
-  border: 2px solid #e9e9e9;
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  font-weight: bold;
+
+.search__location {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: 200px;
 }
-.header__search input:focus {
+.search__location .search__icons {
+  padding: 8px 10px;
+}
+.search__location .input-field {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 0px;
+  flex: 1 0 0;
+}
+.search__location .input-field input {
+  background-color: transparent;
+  border: 0;
+  padding: 15px 10px;
+  width: 100%;
+}
+.search__location .input-field input:focus {
   outline: none;
 }
-.header__icons {
-  display: block;
-  position: absolute;
-  top: 80px;
-  margin-left: 100px;
-  color: #000;
-  height: 30px;
-  width: 30px;
+
+.reserve__btn-1 {
+  display: inline-block;
+  background: linear-gradient(#ff79da, #9356dc);
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  text-align: center;
+  border-radius: 25px;
+  color: #fff;
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+  font-weight: bold;
+  margin: 0 0.3em 0.3em 0;
+  padding: 15px 30px;
+  transition: 0.2s;
 }
 
 main {
@@ -151,20 +169,78 @@ main {
   font-weight: normal;
   color: #888;
 }
-.reserve__btn-1 {
-  display: inline-block;
-  background: linear-gradient(#ff79da, #9356dc);
-  text-decoration: none;
-  cursor: pointer;
-  border: 0;
-  text-align: center;
-  border-radius: 25px;
-  color: #fff;
-  box-shadow: 0 5px 15px 0 #c3c3c3;
+
+.aside {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin: 10px 5px;
+}
+.aside__title {
+  font-size: 18px;
   font-weight: bold;
-  margin: 0 0.3em 0.3em 0;
-  padding: 15px 30px;
-  transition: 0.2s;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 15px;
+}
+.aside__step {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.aside__button {
+  flex: 1 0 auto;
+  margin-bottom: 20px;
+  text-decoration: none;
+  background: #e9e9e9;
+  border-radius: 30px;
+  text-align: center;
+  margin-left: 0;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  color: #000;
+  font-weight: bold;
+  padding: 20px 15px;
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+}
+.aside__circle {
+  position: absolute;
+  left: 15px;
+  margin-top: -5px;
+  background-color: #9356dc;
+  border-radius: 100%;
+  color: #fff;
+  height: 25px;
+  width: 25px;
+  padding: 4px 8px;
+  font-weight: bold;
+  line-height: 1.3;
+}
+.aside__icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  color: grey;
+  margin-right: 15px;
+  position: absolute;
+  font-size: 14px;
+  margin-left: 17px;
+  margin-right: 20px;
+}
+.aside__icons:hover {
+  color: #9356dc;
+}
+
+.store {
+  background-color: #e9e9e9;
+  padding: 10px;
+  margin-top: 15px;
+}
+.store__title {
+  font-size: 22px;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  margin-bottom: 18px;
+  color: #000;
 }
 
 /*# sourceMappingURL=style.css.map */
