--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -49,6 +49,7 @@ select {
 
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
@@ -231,9 +232,19 @@ main {
 }
 
 .store {
-  background-color: #e9e9e9;
+  background-color: #f4f4f4;
   padding: 10px;
   margin-top: 15px;
+}
+.store__card {
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+  min-width: 0;
+  background: #fff;
+  box-shadow: 2px 2px 10px 2px #e9e9e9;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 .store__title {
   font-size: 22px;
@@ -241,6 +252,94 @@ main {
   font-weight: bold;
   margin-bottom: 18px;
   color: #000;
+}
+.store__img__header {
+  position: relative;
+  max-height: 200px;
+}
+.store__img__header img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 200px;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+}
+
+.img-btn-left {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #99e2d0;
+  color: #2c9c81;
+  padding: 3px 10px;
+  font-weight: bold;
+  z-index: 999;
+}
+
+.store__contain {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 10px;
+  width: 100%;
+}
+.store__contain h4 {
+  color: #9d9d9d;
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.strong {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+}
+
+.like {
+  position: relative;
+}
+.like i {
+  color: #9d9d9d;
+  font-size: 20px;
+  left: 50%;
+}
+.like .hover-icon {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+}
+.like .hover-icon:hover {
+  color: #9356dc;
+  opacity: 1;
+  z-index: 999;
+}
+.like:hover {
+  cursor: pointer;
+  overflow: hidden;
+}
+.like .default-icon:hover {
+  opacity: 0;
+}
+
+.footer {
+  background: #333;
+  padding: 20px;
+  text-align: center;
+  color: #fff;
+}
+.footer__logo {
+  filter: invert(1);
+  max-width: 150px;
+}
+.footer__link {
+  text-align: left;
+}
+
+.footer-icons {
+  margin-right: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
