--- a/sass/main.scss
+++ b/sass/main.scss
@@ -98,9 +98,19 @@ main {
 }
 
 .store {
-  background-color: $color-background-2;
+  background-color: $bggrey;
   padding: 10px;
   margin-top: 15px;
+  &__card {
+    display: flex;
+    flex-direction: column;
+    margin: 15px;
+    min-width: 0;
+    background: #fff;
+    box-shadow: 2px 2px 10px 2px $color-background-2;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
   &__title {
     font-size: 22px;
     font-family: $text-font;
@@ -108,4 +118,95 @@ main {
     margin-bottom: 18px;
     color: $color-black;
   }
+  &__img__header {
+    position: relative;
+    max-height: 200px;
+    img {
+      object-fit: cover;
+      width: 100%;
+      max-height: 200px;
+      border-top-left-radius: 1em;
+      border-top-right-radius: 1em;
+    }
+  }
+}
+
+.img-btn-left {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: $color-tertiary;
+  color: $color-dark-green;
+  padding: 3px 10px;
+  font-weight: $fontWeight;
+  z-index: 999;
+}
+
+.store__contain {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 10px;
+  width: 100%;
+  h3 {
+  }
+  h4 {
+    color: #9d9d9d;
+    font-size: 12px;
+    margin-top: 10px;
+  }
+}
+
+.strong {
+  text-decoration: none;
+  color: $color-black;
+  font-weight: $fontWeight;
+  font-size: 15px;
+  font-family: $text-font;
+}
+.like {
+  position: relative;
+
+  i {
+    color: #9d9d9d;
+    font-size: 20px;
+    left: 50%;
+  }
+  .hover-icon {
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    &:hover {
+      color: $color-primary;
+      opacity: 1;
+      z-index: 999;
+    }
+  }
+  &:hover {
+    cursor: pointer;
+    overflow: hidden;
+  }
+  .default-icon:hover {
+    opacity: 0;
+  }
+}
+
+.footer {
+  background: #333;
+  padding: 20px;
+  text-align: center;
+  color: #fff;
+
+  &__logo {
+    filter: invert(1);
+    max-width: 150px;
+  }
+  &__link {
+    text-align: left;
+  }
+}
+
+.footer-icons {
+  margin-right: 15px;
 }
