--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,9 @@
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
+$color-dark-green: #2c9c81;
 $color-background: #f2f2f2;
+$bggrey: #f4f4f4;
 $color-black: #000;
 $color-background-2: #e9e9e9;
 
