--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -81,6 +81,7 @@ th {
 /*Coleurs de base du site*/
 /*Charte d'écriture*/
 /*Font type*/
+/*Media queries*/
 .header {
   display: flex;
   flex-direction: column;
@@ -124,6 +125,10 @@ th {
   outline: none;
 }
 
+/*Coleurs de base du site*/
+/*Charte d'écriture*/
+/*Font type*/
+/*Media queries*/
 .reserve__btn-1 {
   display: inline-block;
   background: linear-gradient(#ff79da, #9356dc);
@@ -136,8 +141,331 @@ th {
   box-shadow: 0 5px 15px 0 #c3c3c3;
   font-weight: bold;
   margin: 0 0.3em 0.3em 0;
-  padding: 15px 30px;
+  padding: 15px 15px;
   transition: 0.2s;
+}
+.reserve__btn-1:hover {
+  background: linear-gradient(#ff93e1, #a16be0);
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+}
+
+.like {
+  position: relative;
+}
+.like i {
+  color: #9d9d9d;
+  font-size: 20px;
+  left: 50%;
+}
+.like .hover-icon {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+}
+.like .hover-icon:hover {
+  color: #9356dc;
+  opacity: 1;
+  z-index: 999;
+}
+.like:hover {
+  cursor: pointer;
+  overflow: hidden;
+}
+.like .default-icon:hover {
+  opacity: 0;
+}
+
+.footer {
+  background: #333;
+  padding: 20px;
+  text-align: center;
+  color: #fff;
+}
+.footer__logo {
+  filter: invert(1);
+  max-width: 150px;
+}
+.footer__link {
+  text-align: left;
+}
+
+.footer-icons {
+  margin-right: 15px;
+}
+
+/*Media queries*/
+.aside {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin: 10px 5px;
+}
+.aside__title {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 15px;
+}
+.aside__step {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.aside__button {
+  flex: 1 0 auto;
+  margin-bottom: 20px;
+  text-decoration: none;
+  background: #e9e9e9;
+  border-radius: 30px;
+  text-align: justify;
+  margin-left: 0;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  color: #000;
+  font-weight: bold;
+  padding: 20px 15px;
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+}
+.aside__circle {
+  position: absolute;
+  left: 15px;
+  margin-top: -5px;
+  background-color: #9356dc;
+  border-radius: 100%;
+  color: #fff;
+  height: 20px;
+  width: 20px;
+  padding: 4px 8px;
+  font-weight: bold;
+}
+.aside__icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  color: grey;
+  margin-right: 15px;
+  position: absolute;
+  font-size: 14px;
+  margin-left: 17px;
+  margin-right: 20px;
+}
+.aside__icons:hover {
+  color: #9356dc;
+}
+.aside__texte {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+@media only screen and (max-width: 768px) {
+  .aside__step {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .aside__button {
+    margin-left: 20px;
+  }
+}
+
+/*********MEDIA QUERIES PHONE DISPLAY : 764px**************/
+/*.header {
+  @include phone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #e9e9e9;
+  }
+
+  &__logo {
+    @include phone {
+      background: #fff;
+      width: 160%;
+      text-align: center;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+      border-bottom: 2px solid #f4f4f4;
+      padding: 5px 46px;
+      img {
+        height: 50px;
+        width: 160px;
+      }
+    }
+  }
+}
+
+.search__location {
+  @include phone {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: 200px;
+
+    .search__icons {
+      padding: 8px 10px;
+    }
+
+    .input-field {
+      -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+      flex: 1 0 0;
+      input {
+        background-color: transparent;
+        border: 0;
+        padding: 15px 10px;
+        width: 100%;
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+  }
+}
+*/
+/*
+.aside {
+  @include phone {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    margin: 10px 5px;
+  }
+  &__title {
+    @include phone {
+      font-size: 18px;
+      font-weight: $fontWeight;
+      font-family: $text-font;
+      margin-bottom: 15px;
+    }
+  }
+  &__step {
+    @include phone {
+      display: flex;
+      flex-direction: column;
+      margin-top: 20px;
+    }
+  }
+  &__button {
+    @include phone {
+      flex: 1 0 auto;
+      margin-bottom: 20px;
+      text-decoration: none;
+      background: $color-background-2;
+      border-radius: 30px;
+      text-align: justify;
+      margin-left: 0;
+      font-size: 12px;
+      font-family: $text-font;
+      color: $color-black;
+      font-weight: $fontWeight;
+      padding: 20px 15px;
+      @include shadowbox;
+    }
+  }
+  &__circle {
+    @include phone {
+      position: absolute;
+      left: 15px;
+      margin-top: -5px;
+      background-color: $color-primary;
+      border-radius: 100%;
+      color: #fff;
+      height: 20px;
+      width: 20px;
+      padding: 4px 8px;
+      font-weight: $fontWeight;
+    }
+  }
+  &__icons {
+    @include phone {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      color: grey;
+      margin-right: 15px;
+      position: absolute;
+      font-size: 14px;
+      margin-left: 17px;
+      margin-right: 20px;
+      &:hover {
+        color: $color-primary;
+      }
+    }
+  }
+  &__texte {
+    @include phone {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+  }
+}
+*/
+.aside {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin: 10px 5px;
+}
+.aside__title {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 15px;
+}
+.aside__step {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.aside__button {
+  flex: 1 0 auto;
+  margin-bottom: 20px;
+  text-decoration: none;
+  background: #e9e9e9;
+  border-radius: 30px;
+  text-align: justify;
+  margin-left: 0;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  color: #000;
+  font-weight: bold;
+  padding: 20px 15px;
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+}
+.aside__circle {
+  position: absolute;
+  left: 15px;
+  margin-top: -5px;
+  background-color: #9356dc;
+  border-radius: 100%;
+  color: #fff;
+  height: 20px;
+  width: 20px;
+  padding: 4px 8px;
+  font-weight: bold;
+}
+.aside__icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  color: grey;
+  margin-right: 15px;
+  position: absolute;
+  font-size: 14px;
+  margin-left: 17px;
+  margin-right: 20px;
+}
+.aside__icons:hover {
+  color: #9356dc;
+}
+.aside__texte {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 main {
@@ -166,69 +494,9 @@ main {
   margin-bottom: 15px;
 }
 .reserve__hgroup h2 {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: normal;
   color: #888;
-}
-
-.aside {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  margin: 10px 5px;
-}
-.aside__title {
-  font-size: 18px;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
-  margin-bottom: 15px;
-}
-.aside__step {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-}
-.aside__button {
-  flex: 1 0 auto;
-  margin-bottom: 20px;
-  text-decoration: none;
-  background: #e9e9e9;
-  border-radius: 30px;
-  text-align: center;
-  margin-left: 0;
-  font-size: 12px;
-  font-family: "Roboto", sans-serif;
-  color: #000;
-  font-weight: bold;
-  padding: 20px 15px;
-  box-shadow: 0 5px 15px 0 #c3c3c3;
-}
-.aside__circle {
-  position: absolute;
-  left: 15px;
-  margin-top: -5px;
-  background-color: #9356dc;
-  border-radius: 100%;
-  color: #fff;
-  height: 25px;
-  width: 25px;
-  padding: 4px 8px;
-  font-weight: bold;
-  line-height: 1.3;
-}
-.aside__icons {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  color: grey;
-  margin-right: 15px;
-  position: absolute;
-  font-size: 14px;
-  margin-left: 17px;
-  margin-right: 20px;
-}
-.aside__icons:hover {
-  color: #9356dc;
 }
 
 .store {
@@ -296,50 +564,6 @@ main {
   font-weight: bold;
   font-size: 15px;
   font-family: "Roboto", sans-serif;
-}
-
-.like {
-  position: relative;
-}
-.like i {
-  color: #9d9d9d;
-  font-size: 20px;
-  left: 50%;
-}
-.like .hover-icon {
-  left: 0;
-  opacity: 0;
-  position: absolute;
-}
-.like .hover-icon:hover {
-  color: #9356dc;
-  opacity: 1;
-  z-index: 999;
-}
-.like:hover {
-  cursor: pointer;
-  overflow: hidden;
-}
-.like .default-icon:hover {
-  opacity: 0;
-}
-
-.footer {
-  background: #333;
-  padding: 20px;
-  text-align: center;
-  color: #fff;
-}
-.footer__logo {
-  filter: invert(1);
-  max-width: 150px;
-}
-.footer__link {
-  text-align: left;
-}
-
-.footer-icons {
-  margin-right: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
