--- a/sass/components/__buttons.scss
+++ b/sass/components/__buttons.scss
@@ -1,15 +1,48 @@
+@import "../utils/variables";
+@import "../utils/mixin.scss";
 .reserve__btn-1 {
   display: inline-block;
-  background: linear-gradient(#ff79da, #9356dc);
+  @include lineargarden;
   text-decoration: none;
   cursor: pointer;
   border: 0;
   text-align: center;
   border-radius: 25px;
   color: #fff;
-  box-shadow: 0 5px 15px 0 #c3c3c3;
+  @include shadowbox;
   font-weight: bold;
   margin: 0 0.3em 0.3em 0;
-  padding: 15px 30px;
+  padding: 15px 15px;
   transition: 0.2s;
+  &:hover {
+    background: linear-gradient(#ff93e1, #a16be0);
+    @include shadowbox;
+  }
+}
+
+.like {
+  position: relative;
+
+  i {
+    color: #9d9d9d;
+    font-size: 20px;
+    left: 50%;
+  }
+  .hover-icon {
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    &:hover {
+      color: $color-primary;
+      opacity: 1;
+      z-index: 999;
+    }
+  }
+  &:hover {
+    cursor: pointer;
+    overflow: hidden;
+  }
+  .default-icon:hover {
+    opacity: 0;
+  }
 }
