--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -2,19 +2,23 @@
   box-shadow: 0 5px 15px 0 #c3c3c3;
 }
 
+@mixin shadowOne {
+  box-shadow: 0 5px 15px 0 #9d9d9d;
+}
+
 @mixin lineargarden {
   background: linear-gradient(#ff79da, #9356dc);
 }
 
 /*Media queries*/
 
-@mixin desktop {
-  @media only screen and (max-width: 1024px) {
+@mixin desktop-only {
+  @media only screen and (min-width: 1024px) {
     @content;
   }
 }
-@mixin tablette {
-  @media only screen and (max-width: 768px) {
+@mixin tablette-only {
+  @media only screen and (min-width: 765px) {
     @content;
   }
 }
