--- a/.public/media.css
+++ b/.public/media.css
@@ -3,7 +3,7 @@
 
 
 /************DESKTOP : 1024px *************************/
-
+/*
 @media screen and (min-width: 1024px) {
   .header {
     display: flex;
@@ -43,7 +43,7 @@
 }
 
 /************TABLETTE : 768px *************************/
-
+/*
 @media screen and (min-width: 765px) {
   .aside__step {
     display: flex;
@@ -79,8 +79,6 @@
     justify-content: space-between;
     align-items: center;
     flex-flow: wrap;
-    /*margin-left: -15px;
-    margin-right: -15px;*/
     padding: 15px;
     height: 100%;
   }
