--- a/sass/layout/__aside.scss
+++ b/sass/layout/__aside.scss
@@ -13,6 +13,12 @@
     display: flex;
     flex-direction: column;
     margin-top: 20px;
+    @include tablette-only {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      width: 100%;
+    }
   }
   &__button {
     flex: 1 0 auto;
@@ -28,6 +34,11 @@
     font-weight: $fontWeight;
     padding: 20px 15px;
     @include shadowbox;
+    @include tablette-only {
+      flex: 100%;
+      margin-left: 20px;
+      padding: 10px 5px;
+    }
   }
   &__circle {
     position: absolute;
@@ -40,6 +51,12 @@
     width: 20px;
     padding: 4px 8px;
     font-weight: $fontWeight;
+    @include tablette-only {
+      display: block;
+      position: relative;
+      left: -12px;
+      top: 10px;
+    }
   }
   &__icons {
     display: flex;
@@ -51,6 +68,10 @@
     font-size: 14px;
     margin-left: 17px;
     margin-right: 20px;
+    @include tablette-only {
+      margin-left: 17px;
+      margin-top: -7px;
+    }
     &:hover {
       color: $color-primary;
     }
@@ -59,5 +80,10 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    @include tablette-only {
+      display: block;
+      text-align: center;
+      margin-top: -5px;
+    }
   }
 }
