--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,6 +7,7 @@ $color-background: #f2f2f2;
 $bggrey: #f4f4f4;
 $color-black: #000;
 $color-background-2: #e9e9e9;
+$menu-bg-color: #f6f6f6;
 
 /*Charte d'écriture*/
 
