--- a/sass/pages/__menu1.scss
+++ b/sass/pages/__menu1.scss
@@ -32,11 +32,11 @@ h1 {
   }
 }
 
-.header__back__icon {
-  display: inline-block;
+header .header__back__icon {
+  display: block;
   position: relative;
-  right: 250px;
   bottom: 10px;
+  right: 250px;
   color: #000;
 }
 
@@ -73,7 +73,7 @@ header .cover__img img {
   padding: 20px 0 20px 20px;
 }
 
-.like {
+.like-menu {
   position: absolute;
   right: 30px;
   top: 20px;
@@ -89,7 +89,7 @@ header .cover__img img {
   flex: 1 0 33%;
   margin-bottom: 15px;
 }
-.subtitle {
+.sub__title {
   margin-bottom: 15px;
   font-size: 18px;
   text-transform: uppercase;
@@ -124,7 +124,7 @@ header .cover__img img {
     position: relative;
     top: 25px;
     color: #333;
-    font-size: 1em;
+    font-size: 11px;
     font-weight: normal;
   }
   .price__container {
@@ -148,7 +148,7 @@ header .cover__img img {
     border-top-right-radius: 15px;
     position: relative;
   }
-  .btn-cirle {
+  .btn-circle {
     font-size: 24px;
     color: #fff;
   }
@@ -166,6 +166,6 @@ header .cover__img img {
 .menu__text:hover .btn-circle {
   position: absolute;
   background: $color-tertiary;
-  left: 27%;
-  top: 30%;
+  /*left: 27%;
+  top: 30%;*/
 }
