Finish all pages

--- a/sass/components/__buttons.scss
+++ b/sass/components/__buttons.scss
@@ -46,3 +46,11 @@
     opacity: 0;
   }
 }
+
+/***************Commander Button***************/
+
+.btn-2 {
+  margin-top: 25px;
+  margin-left: 45px;
+  width: 60%;
+}
