--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -210,6 +210,13 @@ th {
   opacity: 0;
 }
 
+/***************Commander Button***************/
+.btn-2 {
+  margin-top: 25px;
+  margin-left: 45px;
+  width: 60%;
+}
+
 footer a {
   text-decoration: none;
   color: #fff;
@@ -576,6 +583,63 @@ main {
 /*Charte d'écriture*/
 /*Font type*/
 /*Media queries*/
+/*Coleurs de base du site*/
+/*Charte d'écriture*/
+/*Font type*/
+/*Media queries*/
+.reserve__btn-1 {
+  display: inline-block;
+  background: linear-gradient(#ff79da, #9356dc);
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  text-align: center;
+  border-radius: 25px;
+  color: #fff;
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+  font-weight: bold;
+  margin: 0 0.3em 0.3em 0;
+  padding: 15px 15px;
+  transition: 0.2s;
+}
+.reserve__btn-1:hover {
+  background: linear-gradient(#ff93e1, #a16be0);
+  box-shadow: 0 5px 15px 0 #c3c3c3;
+}
+
+.like {
+  position: relative;
+}
+.like i {
+  color: #9d9d9d;
+  font-size: 20px;
+  left: 50%;
+}
+.like .hover-icon {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+}
+.like .hover-icon:hover {
+  color: #9356dc;
+  opacity: 1;
+  z-index: 999;
+}
+.like:hover {
+  cursor: pointer;
+  overflow: hidden;
+}
+.like .default-icon:hover {
+  opacity: 0;
+}
+
+/***************Commander Button***************/
+.btn-2 {
+  margin-top: 25px;
+  margin-left: 45px;
+  width: 60%;
+}
+
 body {
   background-color: #fff;
   color: #333;
@@ -598,6 +662,10 @@ h1 {
   align-items: center;
 }
 .menu__header__logo {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: column;
   background: white;
   width: 160%;
   text-align: center;
@@ -605,12 +673,19 @@ h1 {
   border-bottom: 2px solid #f4f4f4;
   padding: 5px 46px;
 }
+@media only screen and (min-width: 1024px) {
+  .menu__header__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
 
 header .header__back__icon {
   display: block;
-  position: relative;
-  bottom: 10px;
-  right: 250px;
+  margin-right: 275px;
+  position: absolute;
   color: #000;
 }
 
