--- a/sass/pages/__menu1.scss
+++ b/sass/pages/__menu1.scss
@@ -1,6 +1,8 @@
 @import "../utils/variables";
 @import "../utils/mixin";
 
+@import "../components/_buttons";
+
 body {
   background-color: #fff;
   color: #333;
@@ -23,20 +25,29 @@ h1 {
   align-items: center;
 
   &__logo {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: column;
     background: rgb(255, 255, 255);
     width: 160%;
     text-align: center;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
     border-bottom: 2px solid #f4f4f4;
     padding: 5px 46px;
+    @include desktop-only {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
   }
 }
 
 header .header__back__icon {
   display: block;
-  position: relative;
-  bottom: 10px;
-  right: 250px;
+  margin-right: 275px;
+  position: absolute;
   color: #000;
 }
 
