--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,7 +311,8 @@ footer a {
   color: #fff;
   height: 20px;
   width: 20px;
-  padding: 4px 8px;
+  line-height: 0.85;
+  padding: 6px 7px;
   font-weight: bold;
 }
 @media only screen and (min-width: 765px) {
@@ -411,7 +412,8 @@ footer a {
   color: #fff;
   height: 20px;
   width: 20px;
-  padding: 4px 8px;
+  line-height: 0.85;
+  padding: 6px 7px;
   font-weight: bold;
 }
 @media only screen and (min-width: 765px) {
