--- a/sass/layout/__aside.scss
+++ b/sass/layout/__aside.scss
@@ -49,7 +49,8 @@
     color: #fff;
     height: 20px;
     width: 20px;
-    padding: 4px 8px;
+    line-height: 0.85;
+    padding: 6px 7px;
     font-weight: $fontWeight;
     @include tablette-only {
       display: block;
