--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,8 @@
 @import "./layout/_header";
 @import "./components/_buttons";
 @import "./layout/_footer";
-@import "./layout/_mediaqueries";
 @import "./layout/_aside";
 @import "./pages/_home";
 @import "./pages/_menu1";
+@import "./layout/_keyframes";
+@import "./layout/_animations";
