--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,6 +8,7 @@ $bggrey: #f4f4f4;
 $color-black: #000;
 $color-background-2: #e9e9e9;
 $menu-bg-color: #f6f6f6;
+$animation-bg-color: rgba(10, 10, 10, 0.6);
 
 /*Charte d'écriture*/
 
