--- a/sass/layout/__animations.scss
+++ b/sass/layout/__animations.scss
@@ -16,29 +16,19 @@
   &:hover {
     @include shadowOne;
   }
-  .prod {
-    font-size: 15px;
-    font-weight: $fontWeight;
-    margin-left: 12px;
-    overflow: hidden;
-  }
-  h4 {
-    color: #333;
-    margin-left: 12px;
-    font-size: 11px;
-    font-weight: normal;
-  }
+
   .price__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   .price {
-    font-size: 1.125em;
+    font-size: 17px;
     font-weight: bold;
     margin-top: 18px;
     padding-right: 10px;
     text-align: right;
+    animation: checkbox-contain ease 0.3s forwards 1;
   }
 
   .checkbox {
@@ -60,7 +50,8 @@
   background: $color-tertiary;
   max-width: 50px;
   overflow: hidden;
-  animation: checkbox ease 0.3s 1 forwards;
+  animation: checkbox ease 0.3s forwards 1;
+
   transform-origin: 50% 50%;
 }
 
@@ -70,8 +61,7 @@
   top: 30%;
   background: $color-tertiary;
   transform: rotate(360deg);
-  animation: validebtn ease 0.3s;
-  animation-iteration-count: 1;
+  animation: validebtn ease 0.5s 1;
 }
 
 @for $i from 1 through 15 {
