--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -1,3 +1,4 @@
+/*Box Shadow */
 @mixin shadowbox {
   box-shadow: 0 5px 15px 0 #c3c3c3;
 }
@@ -5,10 +6,12 @@
 @mixin shadowOne {
   box-shadow: 0 5px 15px 0 #9d9d9d;
 }
-
+/*Background-Color*/
 @mixin lineargarden {
   background: linear-gradient(#ff79da, #9356dc);
 }
+
+/*Color linear */
 
 /*Media queries*/
 
@@ -33,3 +36,5 @@
 
 @mixin likeanimated {
 }
+
+/*Text overflow white-space proprety*/
