--- a/sass/layout/__aside.scss
+++ b/sass/layout/__aside.scss
@@ -9,6 +9,12 @@
     font-family: $text-font;
     margin-bottom: 15px;
   }
+
+  %backgroundgradient {
+    @include lineargarden;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+  }
   &__step {
     display: flex;
     flex-direction: column;
@@ -34,6 +40,13 @@
     font-weight: $fontWeight;
     padding: 20px 15px;
     @include shadowbox;
+    &:hover {
+      background: #f2eafb;
+      box-shadow: 2px 2px 10px 2px #e4d5f6;
+      .aside__icons {
+        color: $color-primary;
+      }
+    }
     @include tablette-only {
       flex: 100%;
       margin-left: 20px;
@@ -42,15 +55,15 @@
   }
   &__circle {
     position: absolute;
-    left: 15px;
-    margin-top: -5px;
-    background-color: $color-primary;
+    left: 12px;
+    margin-top: -7px;
+    background: $color-primary;
     border-radius: 100%;
     color: #fff;
-    height: 20px;
-    width: 20px;
-    line-height: 0.85;
-    padding: 6px 7px;
+    height: 25px;
+    width: 25px;
+    line-height: 1.67;
+    padding: 2px 10px;
     font-weight: $fontWeight;
     @include tablette-only {
       display: block;
@@ -66,21 +79,19 @@
     color: grey;
     margin-right: 15px;
     position: absolute;
-    font-size: 14px;
+    font-size: 20px;
     margin-left: 17px;
     margin-right: 20px;
     @include tablette-only {
       margin-left: 17px;
       margin-top: -7px;
     }
-    &:hover {
-      color: $color-primary;
-    }
   }
   &__texte {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    font-size: 14px;
     @include tablette-only {
       display: block;
       text-align: center;
