--- a/sass/layout/__keyframes.scss
+++ b/sass/layout/__keyframes.scss
@@ -21,7 +21,7 @@
     transform: rotade(-30deg) scale(1.08);
   }
   100% {
-    transform: rotate3d(5deg) scale(1);
+    transform: rotate(5deg) scale(1);
   }
 }
 
