--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./base/reset";
-@import "./utils/variables";
-@import "./utils/mixin.scss";
+@import "./utils/_variables";
+@import "./utils/_mixin";
 @import "./layout/_header";
 @import "./components/_buttons";
 @import "./layout/_footer";
