--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,12 +87,6 @@ th {
 /*Media queries*/
 /*Animation proprety*/
 /*Text overflow white-space proprety*/
-/*Box Shadow */
-/*Background-Color*/
-/*Color linear */
-/*Media queries*/
-/*Animation proprety*/
-/*Text overflow white-space proprety*/
 .header {
   display: flex;
   flex-direction: column;
@@ -136,7 +130,7 @@ th {
 @media only screen and (min-width: 1024px) {
   .search__location {
     background: linear-gradient(#ff79da, #9356dc);
-    padding: 3px -5px;
+    padding: 3px;
     width: 50%;
     border-radius: 25px;
     margin-right: 25px;
@@ -170,15 +164,6 @@ th {
   }
 }
 
-/*Coleurs de base du site*/
-/*Charte d'écriture*/
-/*Font type*/
-/*Box Shadow */
-/*Background-Color*/
-/*Color linear */
-/*Media queries*/
-/*Animation proprety*/
-/*Text overflow white-space proprety*/
 .reserve__btn-1 {
   display: inline-block;
   background: linear-gradient(#ff79da, #9356dc);
@@ -206,10 +191,12 @@ th {
 
 .like {
   position: relative;
+  margin-right: 22px;
+  margin-top: 4px;
 }
 .like i {
   color: #9d9d9d;
-  font-size: 20px;
+  font-size: 24px;
   left: 50%;
 }
 .like .hover-icon {
@@ -381,12 +368,6 @@ footer a {
   }
 }
 
-/*Box Shadow */
-/*Background-Color*/
-/*Color linear */
-/*Media queries*/
-/*Animation proprety*/
-/*Text overflow white-space proprety*/
 main {
   display: flex;
   flex-flow: column nowrap;
@@ -419,6 +400,10 @@ main {
   color: #888;
 }
 
+article a {
+  text-decoration: none;
+}
+
 .store {
   background-color: #f4f4f4;
   padding: 10px;
@@ -441,8 +426,7 @@ main {
   min-width: 0;
   background: #fff;
   box-shadow: 2px 2px 10px 2px #e9e9e9;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-radius: 15px;
 }
 .store__title {
   font-size: 22px;
@@ -499,39 +483,22 @@ main {
   flex-wrap: nowrap;
   padding: 10px;
   width: 100%;
+  margin-top: 10px;
 }
 .store__contain h4 {
-  color: #9d9d9d;
-  font-size: 12px;
-  margin-top: 10px;
+  font-weight: 300;
+  font-size: 1.1rem;
+  margin-left: 0;
 }
 
 .strong {
   text-decoration: none;
   color: #000;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 1.1rem;
   font-family: "Roboto", sans-serif;
 }
 
-/*Coleurs de base du site*/
-/*Charte d'écriture*/
-/*Font type*/
-/*Box Shadow */
-/*Background-Color*/
-/*Color linear */
-/*Media queries*/
-/*Animation proprety*/
-/*Text overflow white-space proprety*/
-/*Coleurs de base du site*/
-/*Charte d'écriture*/
-/*Font type*/
-/*Box Shadow */
-/*Background-Color*/
-/*Color linear */
-/*Media queries*/
-/*Animation proprety*/
-/*Text overflow white-space proprety*/
 .reserve__btn-1 {
   display: inline-block;
   background: linear-gradient(#ff79da, #9356dc);
@@ -559,10 +526,12 @@ main {
 
 .like {
   position: relative;
+  margin-right: 22px;
+  margin-top: 4px;
 }
 .like i {
   color: #9d9d9d;
-  font-size: 20px;
+  font-size: 24px;
   left: 50%;
 }
 .like .hover-icon {
@@ -621,27 +590,21 @@ main {
 /*Animation du checkbox */
 @keyframes checkbox {
   0% {
-    opacity: 0.5;
     transform: translate(50px, 0);
   }
   20% {
-    opacity: 0.6;
     transform: translate(30px, 0);
   }
   40% {
-    opacity: 0.7;
     transform: translate(20px, 0);
   }
   60% {
-    opacity: 0.8;
     transform: translate(15px, 0);
   }
   80% {
-    opacity: 0.9;
     transform: translate(7px, 0);
   }
   100% {
-    opacity: 1;
     transform: translate(1px, 0);
   }
 }
@@ -689,7 +652,10 @@ main {
   border-radius: 20px;
   cursor: pointer;
   box-shadow: 0 5px 15px 0 #c3c3c3;
-  margin-top: 25px;
+  /*margin-top: 25px;*/
+  margin: 10px 0;
+  flex: 1 0 33%;
+  overflow: hidden;
 }
 @media only screen and (min-width: 1024px) {
   .menu__text {
@@ -704,8 +670,6 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.menu__text .price {
   font-size: 17px;
   font-weight: bold;
   margin-top: 18px;
@@ -713,19 +677,22 @@ main {
   text-align: right;
 }
 .menu__text .checkbox {
-  position: relative;
   display: none;
-  width: 20%;
+  width: 30%;
   border-bottom-right-radius: 15px;
   border-top-right-radius: 15px;
 }
 .menu__text .btn-circle {
   font-size: 24px;
   color: #fff;
+  transform: rotate(360deg);
 }
 
-.menu__text:hover .price {
-  animation: checkbox-contain ease 0.3s forwards 1;
+.menu__text:hover .price__container {
+  animation: checkbox-contain ease 0.3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  min-width: 50px;
 }
 
 .menu__text:hover .checkbox {
@@ -734,7 +701,9 @@ main {
   background: #99e2d0;
   max-width: 50px;
   overflow: hidden;
-  animation: checkbox ease 0.3s forwards 1;
+  animation: checkbox ease 0.3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
   transform-origin: 50% 50%;
 }
 
@@ -743,7 +712,6 @@ main {
   left: 27%;
   top: 30%;
   background: #99e2d0;
-  transform: rotate(360deg);
   animation: validebtn ease 0.5s 1;
 }
 
@@ -987,10 +955,6 @@ header .cover__img img {
   padding: 20px;
 }
 
-.menu__details {
-  flex: 1 0 33%;
-  margin-bottom: 15px;
-}
 @media only screen and (min-width: 1024px) {
   .menu__details {
     display: flex;
@@ -1029,12 +993,10 @@ header .cover__img img {
 .prod {
   font-size: 20px;
   font-weight: bold;
-  margin-left: 12px;
 }
 
 h4 {
   color: #333;
-  margin-left: 18px;
   font-size: 15px;
   font-weight: normal;
 }
@@ -1072,27 +1034,21 @@ h4 {
 /*Animation du checkbox */
 @keyframes checkbox {
   0% {
-    opacity: 0.5;
     transform: translate(50px, 0);
   }
   20% {
-    opacity: 0.6;
     transform: translate(30px, 0);
   }
   40% {
-    opacity: 0.7;
     transform: translate(20px, 0);
   }
   60% {
-    opacity: 0.8;
     transform: translate(15px, 0);
   }
   80% {
-    opacity: 0.9;
     transform: translate(7px, 0);
   }
   100% {
-    opacity: 1;
     transform: translate(1px, 0);
   }
 }
@@ -1157,27 +1113,21 @@ h4 {
 /*Animation du checkbox */
 @keyframes checkbox {
   0% {
-    opacity: 0.5;
     transform: translate(50px, 0);
   }
   20% {
-    opacity: 0.6;
     transform: translate(30px, 0);
   }
   40% {
-    opacity: 0.7;
     transform: translate(20px, 0);
   }
   60% {
-    opacity: 0.8;
     transform: translate(15px, 0);
   }
   80% {
-    opacity: 0.9;
     transform: translate(7px, 0);
   }
   100% {
-    opacity: 1;
     transform: translate(1px, 0);
   }
 }
@@ -1225,7 +1175,10 @@ h4 {
   border-radius: 20px;
   cursor: pointer;
   box-shadow: 0 5px 15px 0 #c3c3c3;
-  margin-top: 25px;
+  /*margin-top: 25px;*/
+  margin: 10px 0;
+  flex: 1 0 33%;
+  overflow: hidden;
 }
 @media only screen and (min-width: 1024px) {
   .menu__text {
@@ -1240,8 +1193,6 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.menu__text .price {
   font-size: 17px;
   font-weight: bold;
   margin-top: 18px;
@@ -1249,19 +1200,22 @@ h4 {
   text-align: right;
 }
 .menu__text .checkbox {
-  position: relative;
   display: none;
-  width: 20%;
+  width: 30%;
   border-bottom-right-radius: 15px;
   border-top-right-radius: 15px;
 }
 .menu__text .btn-circle {
   font-size: 24px;
   color: #fff;
+  transform: rotate(360deg);
 }
 
-.menu__text:hover .price {
-  animation: checkbox-contain ease 0.3s forwards 1;
+.menu__text:hover .price__container {
+  animation: checkbox-contain ease 0.3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  min-width: 50px;
 }
 
 .menu__text:hover .checkbox {
@@ -1270,7 +1224,9 @@ h4 {
   background: #99e2d0;
   max-width: 50px;
   overflow: hidden;
-  animation: checkbox ease 0.3s forwards 1;
+  animation: checkbox ease 0.3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
   transform-origin: 50% 50%;
 }
 
@@ -1279,7 +1235,6 @@ h4 {
   left: 27%;
   top: 30%;
   background: #99e2d0;
-  transform: rotate(360deg);
   animation: validebtn ease 0.5s 1;
 }
 
