--- a/sass/layout/__animations.scss
+++ b/sass/layout/__animations.scss
@@ -7,7 +7,10 @@
   border-radius: 20px;
   cursor: pointer;
   @include shadowbox;
-  margin-top: 25px;
+  /*margin-top: 25px;*/
+  margin: 10px 0;
+  flex: 1 0 33%;
+  overflow: hidden;
 
   @include desktop-only {
     flex: 25%;
@@ -22,30 +25,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  .price {
     font-size: 17px;
     font-weight: bold;
     margin-top: 18px;
     padding-right: 10px;
     text-align: right;
   }
-
   .checkbox {
-    position: relative;
     display: none;
-    width: 20%;
+    width: 30%;
     border-bottom-right-radius: 15px;
     border-top-right-radius: 15px;
   }
   .btn-circle {
     font-size: 24px;
     color: #fff;
+    transform: rotate(360deg);
   }
 }
 
-.menu__text:hover .price {
-  animation: checkbox-contain ease 0.3s forwards 1;
+.menu__text:hover .price__container {
+  animation: checkbox-contain ease 0.3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  min-width: 50px;
 }
 
 .menu__text:hover .checkbox {
@@ -54,8 +57,9 @@
   background: $color-tertiary;
   max-width: 50px;
   overflow: hidden;
-  animation: checkbox ease 0.3s forwards 1;
-
+  animation: checkbox ease 0.3s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
   transform-origin: 50% 50%;
 }
 
@@ -64,7 +68,6 @@
   left: 27%;
   top: 30%;
   background: $color-tertiary;
-  transform: rotate(360deg);
   animation: validebtn ease 0.5s 1;
 }
 
