--- a/sass/pages/__home.scss
+++ b/sass/pages/__home.scss
@@ -1,5 +1,3 @@
-@import "../utils/mixin.scss";
-
 main {
   display: flex;
   flex-flow: column nowrap;
@@ -35,6 +33,10 @@ main {
   }
 }
 
+article a {
+  text-decoration: none;
+}
+
 .store {
   background-color: $bggrey;
   padding: 10px;
@@ -54,8 +56,7 @@ main {
     min-width: 0;
     background: #fff;
     box-shadow: 2px 2px 10px 2px $color-background-2;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-radius: 15px;
   }
   &__title {
     font-size: 22px;
@@ -107,11 +108,12 @@ main {
   flex-wrap: nowrap;
   padding: 10px;
   width: 100%;
+  margin-top: 10px;
 
   h4 {
-    color: #9d9d9d;
-    font-size: 12px;
-    margin-top: 10px;
+    font-weight: 300;
+    font-size: 1.1rem;
+    margin-left: 0;
   }
 }
 
@@ -119,6 +121,6 @@ main {
   text-decoration: none;
   color: $color-black;
   font-weight: $fontWeight;
-  font-size: 15px;
+  font-size: 1.1rem;
   font-family: $text-font;
 }
